--- a/public/frontend_area/assets/css/style.css
+++ b/public/frontend_area/assets/css/style.css
@@ -6367,13 +6367,13 @@ img.mfp-img {
 }
 
 .login-input-box input {
-  border: 1px solid #dcdcdc;
+  border: 1px solid #adadad;
   color: #000000;
   margin-bottom: 20px;
   padding: 10px 12px;
   width: 100%;
   font-size: 13px;
-  background: #f7f7f7;
+  background: #ffffff;
 }
 
 
