Trường update source code

--- a/public/frontend_area/assets/css/checkout-style.css
+++ b/public/frontend_area/assets/css/checkout-style.css
@@ -38,14 +38,14 @@ body {
 }
 
 .fieldset .field .field-input-wrapper .field-input:focus {
-    box-shadow: 0 0 0 2px #242021;
+    box-shadow: 0 0 0 2px #338DBC;
     outline: none;
 }
 
 .radio-wrapper .radio-input .input-radio:checked,
 .checkbox-wrapper .checkbox-input .input-checkbox:checked {
     border: none;
-    box-shadow: 0 0 0 10px #242021 inset;
+    box-shadow: 0 0 0 10px #338DBC inset;
 }
 
 .fieldset .field.field-error .field-input-wrapper .field-input {
@@ -65,7 +65,7 @@ body {
 
 a {
     text-decoration: none;
-    color: #242021;
+    color: #338DBC;
     transition: color 0.2s ease-in-out;
     display: inline-block;
 }
@@ -136,7 +136,7 @@ a:focus {
 }
 
 a:hover {
-    /* color: #2b78a0; */
+    color: #2b78a0;
     filter: brightness(1.2);
 }
 
@@ -277,7 +277,7 @@ select {
 .checkbox-wrapper .checkbox-input .input-checkbox {
     width: 18px;
     height: 18px;
-    box-shadow: 0 0 0 0 #242021 inset;
+    box-shadow: 0 0 0 0 #338DBC inset;
     transition: all 0.2s ease-in-out;
     position: relative;
     cursor: pointer;
@@ -317,14 +317,14 @@ select {
 }
 
 .radio-wrapper .radio-content-input .quick-tagline {
-    color: #242021;
+    color: #338DBC;
     display: flex;
     align-items: center;
     margin-top: 2px;
 }
 
 .radio-wrapper .radio-content-input .quick-tagline svg {
-    fill: #242021;
+    fill: #338DBC;
     margin-left: 10px;
 }
 
@@ -416,7 +416,7 @@ select {
 }
 
 ::selection {
-    background: #242021;
+    background: #338DBC;
     color: white;
 }
 
@@ -545,7 +545,7 @@ select {
 }
 
 .step-footer .step-footer-previous-link .previous-link-icon {
-    fill: #242021;
+    fill: #338DBC;
     transition: all 0.2s cubic-bezier(0.3, 0, 0, 1);
     margin-right: 0.25em;
 }
@@ -733,7 +733,7 @@ margin-right: 5px;
     font-style: normal;
     font-weight: normal;
     font-size: 14px;
-    color: #242021;
+    color: #338DBC;
 }
 
 .payment-later-table>table th:first-child {
@@ -1202,9 +1202,7 @@ padding: 5px;
 .payment-due .payment-due-price {
     font-size: 1.5rem;
     font-weight: 700;
-    /* letter-spacing: -0.04em; */
-    color: #ff2323;
-    /* line-height: 1em; */
+    color: #ea0c0c;
 }
 
 .applied-reduction-code {
@@ -1212,14 +1210,14 @@ padding: 5px;
 }
 
 .applied-reduction-code .applied-reduction-code-icon {
-    fill: #242021;
+    fill: #338DBC;
     vertical-align: middle;
     margin-right: 0.14286em;
 }
 
 .applied-reduction-code .applied-reduction-code-information {
     font-size: 0.85714em;
-    color: #242021;
+    color: #338DBC;
     font-weight: 500;
 }
 
@@ -1230,7 +1228,7 @@ padding: 5px;
 
 .hanging-icon {
     margin-right: 0.75em;
-    stroke: #242021;
+    stroke: #338DBC;
 }
 
 .hanging-icon.hanging-icon-error {
@@ -1314,14 +1312,14 @@ padding: 5px;
 }
 
 .order-summary-toggle .order-summary-toggle-inner .order-summary-toggle-icon-wrapper .order-summary-toggle-icon {
-    fill: #242021;
+    fill: #338DBC;
     transition: fill 0.2s ease-in-out;
 }
 
 
 
 .order-summary-toggle .order-summary-toggle-inner .order-summary-toggle-text {
-    color: #242021;
+    color: #338DBC;
     vertical-align: middle;
     transition: color 0.2s ease-in-out;
     display: none;
@@ -1330,7 +1328,7 @@ padding: 5px;
 .order-summary-toggle .order-summary-toggle-inner .order-summary-toggle-text .order-summary-toggle-dropdown {
     vertical-align: middle;
     transition: fill 0.2s ease-in-out;
-    fill: #242021;
+    fill: #338DBC;
 }
 
 .order-summary-toggle .order-summary-toggle-inner .order-summary-toggle-total-recap {
@@ -1554,7 +1552,7 @@ padding: 5px;
         float: right;
     }
     .step-footer-continue-btn{
-        background: #242021;
+        background: #338DBC;
         color: #fff;
         padding: 15px 30px;
         border-radius: 3px;
@@ -1922,7 +1920,7 @@ form#form_update_shipping_method {
     border-radius: 4px;
     font-weight: 500;
     padding: 13px 10px;
-    background: #242021;
+    background: #338DBC;
     color: #fff;
     width: 82px;
     text-align: center;
@@ -1993,7 +1991,7 @@ form#form_update_shipping_method.default {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    color: #242021;
+    color: #338DBC;
 }
 
 .hrv-discount-choose-coupons #list_short_coupon {
@@ -2021,12 +2019,12 @@ form#form_update_shipping_method.default {
 }
 
 .hrv-discount-choose-coupons #list_short_coupon>span span {
-    border: 1px solid #242021;
+    border: 1px solid #338DBC;
     padding: 5px 10px;
     border-radius: 3px;
     background: #fff;
     font-weight: 700;
-    color: #242021
+    color: #338DBC
 }
 
 .hrv-discount-choose-coupons #list_short_coupon>span:before {
@@ -2034,7 +2032,7 @@ form#form_update_shipping_method.default {
     display: block;
     width: 10px;
     height: 10px;
-    border: 1px solid #242021;
+    border: 1px solid #338DBC;
     background: #fff;
     z-index: 1;
     left: -7px;
@@ -2049,7 +2047,7 @@ form#form_update_shipping_method.default {
     display: block;
     width: 10px;
     height: 10px;
-    border: 1px solid #242021;
+    border: 1px solid #338DBC;
     background: #fff;
     z-index: 1;
     right: -7px;
@@ -2188,11 +2186,11 @@ h3.coupon_heading {
 animation: pulse 2s infinite;*/
     height: 40px;
     width: 100%;
-    color: #242021;
+    color: #338DBC;
 }
 
 #show_all_coupon svg {
-    fill: #242021;
+    fill: #338DBC;
     width: 15px;
     position: relative;
 }
@@ -2352,7 +2350,7 @@ position: relative;*/
 
 .hrv-content-coupons-code .coupon_item .coupon_more {
     cursor: pointer;
-    color: #242021;
+    color: #338DBC;
     margin-top: 0px;
     position: relative;
     z-index: 2;
@@ -2393,7 +2391,7 @@ position: relative;*/
     height: 32px;
     padding: 5px 10px !important;
     width: auto !important;
-    background: #242021;
+    background: #338DBC;
 }
 
 
@@ -2456,7 +2454,7 @@ position: relative;*/
     cursor: pointer;
     transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
     position: relative;
-    background: #242021;
+    background: #338DBC;
     color: white;
 }
 .select2-container .select2-selection--single {
@@ -2565,12 +2563,12 @@ position: relative;*/
     color: #000;
 }
 .select2-results__option:hover{
-    background: #242021;
+    background: #338DBC;
     color: #fff;
     cursor: pointer;
 }
 .select2-results__option[aria-selected="true"]{
-    background: #242021;
+    background: #338DBC;
     color: #fff;
 }
 .error p{
@@ -2584,7 +2582,7 @@ position: relative;*/
       padding: 1em !important;
     }
     .step-footer-continue-btn {
-        background: #242021;
+        background: #338DBC;
         color: #fff;
         padding: 15px 30px;
         border-radius: 3px;
