--- a/public/frontend_area/assets/css/style.css
+++ b/public/frontend_area/assets/css/style.css
@@ -8228,7 +8228,10 @@ a[data-fancybox] img {
     background-color: #28b928;
     color: white;
 }
-
+.badge.warning {
+    background-color: #e2c000;
+    color: white;
+}
 .select-opstion-box {
     margin-bottom: 20px;
 }
@@ -8357,4 +8360,11 @@ a[data-fancybox] img {
     color: #0cb80c;
     font-weight: 700;
     font-size: 12px;
+}
+.buy-for-guest{
+    text-decoration: underline;
+    margin-bottom:15px;
+    line-height: 20px;
+    color: black;
+    font-style: italic;
 }
