--- a/public/frontend_area/assets/css/style.css
+++ b/public/frontend_area/assets/css/style.css
@@ -8082,9 +8082,8 @@ a[data-fancybox] img {
 }
 
 .title-blog {
-    border-bottom: 1px solid #ddd;
-    padding-bottom: 10px;
     margin-bottom: 20px;
+    margin-left: 470px;
 }
 
 .latest-blog-content h4 a,
@@ -8228,10 +8227,12 @@ a[data-fancybox] img {
     background-color: #28b928;
     color: white;
 }
+
 .badge.warning {
     background-color: #e2c000;
     color: white;
 }
+
 .select-opstion-box {
     margin-bottom: 20px;
 }
@@ -8361,10 +8362,56 @@ a[data-fancybox] img {
     font-weight: 700;
     font-size: 12px;
 }
-.buy-for-guest{
+
+.buy-for-guest {
     text-decoration: underline;
-    margin-bottom:15px;
+    margin-bottom: 15px;
     line-height: 20px;
     color: black;
     font-style: italic;
+}
+.required{
+    color:red;
+}
+.discount-card {
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.discount-card h5 {
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+
+.discount-card p {
+    margin-bottom: 5px;
+}
+.discount-card .card-title.text-center {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.require_symbol{
+    color: red;
+}
+.huongdanchonsize{
+    margin-bottom: 20px;
+    border: none;
+    background: transparent;
+    font-size: 16px;
+    font-weight: 500;
+    text-decoration: underline;
+}
+.title-hd{
+    margin-bottom: 20px;
+    font-size: 20px;
+    margin-top: 15px;
+    font-weight: 700;
+}
+.img-huongdanchonsize{
+    width: 100%;
+    height: 100%;
+    margin-bottom: 15px;
 }
