--- a/public/frontend_area/assets/css/style.css
+++ b/public/frontend_area/assets/css/style.css
@@ -8415,3 +8415,17 @@ a[data-fancybox] img {
     height: 100%;
     margin-bottom: 15px;
 }
+.copy-button {
+    background-color: #111111;
+    color: white;
+    border: none;
+    padding: 15px 19px;
+    text-align: center;
+    text-decoration: none;
+    display: block;
+    margin: 0 auto;
+    font-size: 14px;
+    border-radius: 4px;
+    cursor: pointer;
+
+}
